# ProgettoLaboratorio12

./: CMakeLists.txt  Collezione.cpp  Collezione.h  Note.cpp  Note.h  main.cpp
tests/: NoteTest.cpp
